move and update mekanism config

--- a/config/mekanism/Mekanism.cfg
+++ b/config/mekanism/Mekanism.cfg
@@ -3,11 +3,13 @@
 client {
     I:AmbientLightingLevel=15
     B:CTMRenderer=true
+    B:DoMultiblockSparkle=true
     B:EnableAmbientLighting=true
     B:EnableMachineSounds=true
     B:EnablePlayerSounds=true
     B:Holidays=true
     B:MachineEffects=true
+    I:MultiblockSparkleIntesity=6
     B:OldTransmitterRender=false
     B:OpaqueTransmitterRender=false
 
@@ -19,6 +21,7 @@ client {
 
 general {
     B:AestheticWorldDamage=true
+    B:AllowProtection=true
     B:AllowSpawnerBoxPickup=true
     B:AllowTransmitterAlloyUpgrade=true
     I:ArmoredJepackDamageMax=115
@@ -32,6 +35,10 @@ general {
     I:DisassemblerEnergyUsage=10
     B:DynamicTankEasterEgg=false
     D:EUToJoules=0.1
+    B:EnableDiamondCompat=true
+    B:EnablePoorOresCompat=true
+    B:EnableQuartzCompat=true
+    B:EnableSiliconCompat=true
     B:EnableWorldRegeneration=false
     D:EnergyPerHeat=1000.0
     D:EnergyPerRedstone=10000.0
@@ -56,10 +63,13 @@ general {
     I:MaxPlenisherNodes=4000
     I:MaxPumpRange=80
     I:MaxScubaGas=24000
+    I:MethaneBurnTime=10
     I:MinerSilkMultiplier=6
     I:ObsidianTNTBlastRadius=12
     I:ObsidianTNTDelay=100
     B:OpsBypassRestrictions=true
+    B:OreDictOsmium=true
+    B:OreDictPlatinum=false
     B:OsmiumGenerationEnabled=false
     I:OsmiumPerChunk=0
     B:PrefilledFluidTanks=false
@@ -78,12 +88,14 @@ general {
     I:VoicePort=36123
     B:VoiceServerEnabled=false
     I:WorldRegenVersion=0
+    B:enableBoPProgression=true
 }
 
 
 generation {
     D:AdvancedSolarGeneration=300.0
     D:BioGeneration=350.0
+    B:EnableWindmillWhitelist=true
     D:HeatGeneration=150.0
     D:HeatGenerationLava=5.0
     D:HeatGenerationNether=100.0
@@ -96,6 +108,36 @@ generation {
     I:WindGenerationMaxY=255
     D:WindGenerationMin=60.0
     I:WindGenerationMinY=24
+
+    # List of dimension id to be whitelisted [default: [0]]
+    S:winddimensionids <
+        0
+     >
+}
+
+
+generationrecipes {
+    B:enableAdvSolarGenerator=true
+    B:enableBioGenerator=true
+    B:enableElectromagneticCoil=true
+    B:enableGasGenerator=true
+    B:enableHeatGenerator=true
+    B:enableReactorAdapter=true
+    B:enableReactorController=true
+    B:enableReactorFrame=true
+    B:enableReactorGlass=true
+    B:enableReactorMatrix=true
+    B:enableReactorPort=true
+    B:enableRotationalComplex=true
+    B:enableSaturatingCondenser=true
+    B:enableSolarGenerator=true
+    B:enableSolarPanel=true
+    B:enableTurbineBlade=true
+    B:enableTurbineCasing=true
+    B:enableTurbineRotor=true
+    B:enableTurbineValve=true
+    B:enableTurbineVent=true
+    B:enableWindGenerator=true
 }
 
 
@@ -136,6 +178,126 @@ machines {
     B:SeismicVibratorEnabled=true
     B:SolarNeutronActivatorEnabled=true
     B:TeleporterEnabled=true
+}
+
+
+recipes {
+    B:enableAdvSolarGenerator=true
+    B:enableAtomicDisassembler=true
+    B:enableBins=true
+    B:enableBioGenerator=true
+    B:enableBoilerCasing=true
+    B:enableBoilerValve=true
+    B:enableBronzeBlock=true
+    B:enableCardboardBox=true
+    B:enableCharcoalBlock=true
+    B:enableChargePad=true
+    B:enableChemicaDissolution=true
+    B:enableChemicalCrystallizer=true
+    B:enableChemicalInfuser=true
+    B:enableChemicalInjection=true
+    B:enableChemicalOxidiser=true
+    B:enableChemicalWasher=true
+    B:enableCircuits=true
+    B:enableCombiner=true
+    B:enableConfigurationCard=true
+    B:enableConfigurator=true
+    B:enableCopperBlock=true
+    B:enableCraftingFormula=true
+    B:enableCrusher=true
+    B:enableDigitalMiner=true
+    B:enableDynamicGlass=true
+    B:enableDynamicTank=true
+    B:enableDynamicValve=true
+    B:enableElectricBow=true
+    B:enableElectricPump=true
+    B:enableElectroliticCore=true
+    B:enableElectrolyticSeparator=true
+    B:enableElectromagneticCoil=true
+    B:enableEnergizedSmelter=true
+    B:enableEnergyCubes=true
+    B:enableEnergyTablet=true
+    B:enableEnrichmentChamber=true
+    B:enableEntangloporter=true
+    B:enableFactories=true
+    B:enableFlamethrower=true
+    B:enableFluidPlenisher=true
+    B:enableFormulaicAssembler=true
+    B:enableFreeRunners=true
+    B:enableFuelwoodHeater=true
+    B:enableGasGenerator=true
+    B:enableGasTanks=true
+    B:enableGaugeDropper=true
+    B:enableHDPEParts=true
+    B:enableHeatGenerator=true
+    B:enableInductionCasing=true
+    B:enableInductionCells=true
+    B:enableInductionPorts=true
+    B:enableInductionProviders=true
+    B:enableJetpacks=true
+    B:enableLaser=true
+    B:enableLaserAmplifyier=true
+    B:enableLaserTractorBeam=true
+    B:enableLiquidTanks=true
+    B:enableLogisticalSorter=true
+    B:enableLogisticalTransporter=true
+    B:enableMachineUpgrades=true
+    B:enableMechanicalPipes=true
+    B:enableMetallurgicInfuser=true
+    B:enableNetworkReader=true
+    B:enableObsidianTNT=true
+    B:enableOredictionator=true
+    B:enableOsmiumBlock=true
+    B:enableOsmiumCompressor=true
+    B:enablePersonalChest=true
+    B:enablePlasticBlocks=true
+    B:enablePortableTeleporter=true
+    B:enablePrecisionSawmill=true
+    B:enablePressureDispenser=true
+    B:enablePressurizedReactorChamber=true
+    B:enablePressurizedTubes=true
+    B:enablePurificationChamber=true
+    B:enableReactorAdapter=true
+    B:enableReactorController=true
+    B:enableReactorFrame=true
+    B:enableReactorGlass=true
+    B:enableReactorMatrix=true
+    B:enableReactorPort=true
+    B:enableRefinedObsidianBlock=true
+    B:enableResistiveHeater=true
+    B:enableRobit=true
+    B:enableRotaryCondensentrator=true
+    B:enableRotationalComplex=true
+    B:enableSaltBlock=true
+    B:enableSaturatingCondenser=true
+    B:enableSawdusttoPaper=true
+    B:enableScubaSet=true
+    B:enableSecurityDesk=true
+    B:enableSeismicReader=true
+    B:enableSeismicVibrator=true
+    B:enableSolarGenerator=true
+    B:enableSolarNeutronActivator=true
+    B:enableSolarPanel=true
+    B:enableSteelBlock=true
+    B:enableSteelCasing=true
+    B:enableSuperheatingElement=true
+    B:enableTeleporterBlock=true
+    B:enableTeleporterCore=true
+    B:enableTeleporterFrame=true
+    B:enableThermalEvaporationBlock=true
+    B:enableThermalEvaporationController=true
+    B:enableThermalEvaporationValve=true
+    B:enableThermoConductors=true
+    B:enableTierInstaller=true
+    B:enableTinBlock=true
+    B:enableTurbineBlade=true
+    B:enableTurbineCasing=true
+    B:enableTurbineRotor=true
+    B:enableTurbineValve=true
+    B:enableTurbineVent=true
+    B:enableUniversalCables=true
+    B:enableWalkieTalkie=true
+    B:enableWindGenerator=true
 }
 
 
