update config files

--- a/config/ExtraPlanets.cfg
+++ b/config/ExtraPlanets.cfg
@@ -695,10 +695,20 @@ items {
     # This option will disable & remove conflicting Planets/Moons/SpaceStations/Thermal Paddings & Custom Celestial Selection screen, NOTE: WILL CHANGE THE FOLLOWING DIMENSION IDS Iapetus & Titania TO -44 & -45
     B:"Enable Basic Galaxy Space Compatibility (v1.2.3 and above)"=false
 
-    # This option will disable & remove conflicting Planets/Moons/SpaceStations/Thermal Paddings, FOR v1.4.4 & ABOVE YOU WILL NEED TO DISABLED ALL CONFIG OPTIONS IN THE MORE PLANETS CONFIG UNDER THE 'config_moreplanets_gc_addon_compat' SECTION!
+    # This option will disable & remove conflicting Planets/Moons/SpaceStations/Thermal Paddings
     B:"Enable More Planets Compatibility"=false
 
-    # This option will do the same as the basic one but will also fix the progression between ExtraPlanets & MorePlanets
+    # Will tweak ExtraPlanets Planets/Moons, to allow them to work along side Extended Planets version of the same planets/moons! Will rename ExtraPlanets versions of doubled Planets/Moons to have 2.0 on the end. Example: Jupiter 2.0
+    B:"Enable New Extended Planets Compatibility (v1.3.1 Alpha)"=false
+
+    # Will tweak ExtraPlanets Planets/Moons, to allow them to work along side Extended Planets version of the same planets/moons! Will rename ExtraPlanets versions of doubled Planets/Moons to have 2.0 on the end. Example: Jupiter 2.0
+    B:"Enable New Extended Planets Compatibility (v1.4 Alpha)"=false
+
+    # Will tweak ExtraPlanets Planets/Moons, to allow them to work along side GalaxySpace version of the same planets/moons! Will rename ExtraPlanets versions of doubled Planets/Moons to have 2.0 on the end. Example: Jupiter 2.0 & disable Custom Celestial Selection screen, NOTE: WILL CHANGE THE FOLLOWING DIMENSION IDS Iapetus & Titania TO -44 & -45
+    B:"Enable New Galaxy Space Compatibility (v1.2.3 and above)"=false
+
+    # Will tweak ExtraPlanets Planets/Moons, to allow them to work along side More Planets version of the same planets/moons! Will rename ExtraPlanets versions of doubled Planets/Moons to have 2.0 on the end. Example: Jupiter 2.0!
+    B:"Enable New More Planets Compatibility"=false
     B:"Enable Progression Fixes for More Planets Compatibility (Only needed for v1.4.3 & below!)"=false
 }
 
