--- a/config/TinkersConstruct.cfg
+++ b/config/TinkersConstruct.cfg
@@ -5,6 +5,13 @@ achievements {
 }
 
 
+craftingstationblacklist {
+    S:tileEntities <
+        wanion.avaritiaddons.block.chest.infinity.TileEntityInfinityChest
+     >
+}
+
+
 "difficulty changes" {
     B:"Add alternative recipe for bolt parts: arrowhead + toolrod in a crafting grid"=false
     B:"Allow creation of endstone"=true
@@ -25,6 +32,7 @@ achievements {
     B:"Keep hunger on death"=true
     B:"Keep levels on death"=true
     B:"Modifiers increase Mining Level"=true
+    B:"Remove Gold Cast Recipes"=true
     B:"Remove Vanilla Tool Effectiveness"=false
     B:"Remove Vanilla Tool Recipes"=false
     B:"Spawn beginner book"=false
@@ -33,6 +41,10 @@ achievements {
 
 
 dimblacklist {
+    # Disallow Traveller's Belt ability to swap inventories for certain dimension ID's
+    I:ForbiddenDim <
+     >
+
     # True: slime islands wont generate in any ages other than overworld(if enabled); False: will generate in all non-blackisted ages
     B:GenerateSlimeIslandInDim0Only=false
 
