--- a/config/buildcraft/compat.cfg
+++ b/config/buildcraft/compat.cfg
@@ -1,7 +1,6 @@
 # Configuration file
 
 client {
-    # Should NEI facade recipes be hidden? [default: false]
     B:hideFacadeRecipes=false
 }
 
@@ -16,6 +15,7 @@ modules {
     B:CarpentersBlocks=true
     B:EnderIO=true
     B:EnderStorage=true
+    B:ForbiddenMagic=true
     B:Forestry=true
     B:ForgeMultipart=true
     B:ImmersiveEngineering=true
@@ -24,6 +24,7 @@ modules {
     B:"Magical Crops"=true
     B:MineFactoryReloaded=true
     B:MineTweaker3=true
+    B:Natura=true
     B:NotEnoughItems=true
     B:PamHarvestCraft=true
     B:Railcraft=true
@@ -37,7 +38,6 @@ modules {
 
 
 waila {
-    # Should WAILA tooltips show whether a block is supported by Builders or not? [default: false]
     B:showBuilderSupportDebug=false
 }
 
