--- a/config/Eln.cfg
+++ b/config/Eln.cfg
@@ -1,27 +1,37 @@
 # Configuration file
 
 balancing {
+    # Watts to EU
     D:ElnToIndustrialCraftConversionRatio=0.3333333333333333
+
+    # Watts to OC Power
     D:ElnToOpenComputerConversionRatio=0.13333333333333333
+
+    # Watts to RF
     D:ElnToThermalExpansionConversionRatio=1.3333333333333333
 
     # Maximum horizontal distance from autominer that will be mined
     I:autominerRange=10
-    D:batteryCapacityFactor=1.0
+    D:batteryCapacityFactor=1
 
     # Multiplication factor for cable power capacity. We recommend 2.0 to 4.0 for larger modpacks, but 1.0 for Eln standalone, or if you like a challenge.
     D:cablePowerFactor=3.0
+
+    # How heavy is *your* flywheel?
+    D:flywheelMass=50.0
     I:fuelGeneratorPowerFactor=1
     D:fuelHeatFurnacePowerFactor=1.0
 
     # Factor to apply when converting real word heat values to Minecraft heat values (1mB = 1l).
     D:fuelHeatValueFactor=6.75E-5
     I:heatTurbinePowerFactor=1
+
+    # Plates made per ingot
     I:platesPerIngot=1
     D:shaftEnergyFactor=0.05
     I:solarPanelPowerFactor=1
 
-    # Display more detailed WAILA info on some machines
+    # Display more detailed WAILA info on some machines (good for creative mode)
     B:wailaEasyMode=false
     I:waterTurbinePowerFactor=1
     I:windTurbinePowerFactor=1
@@ -35,14 +45,23 @@ battery {
 
 
 compatibility {
+    # Enable the OC/CC <-> Eln Computer Probe
     B:ComputerProbeEnable=true
+
+    # Enable the Eln Energy Exporter
     B:ElnToOtherEnergyConverterEnable=true
 }
 
 
 debug {
+    # Enables debug printing spam
     B:enable=false
+
+    # Set this lower if you have clipping sounds in spaces with many sound sources (generators)
     D:maxSoundDistance=16.0
+
+    # Watchdog Impl. check
+    B:watchdog=false
 }
 
 
@@ -57,6 +76,8 @@ entity {
     I:killMonstersAroundLampsRange=16
     I:maxReplicators=100
     I:replicatorId=-1
+
+    # Enable the replicator mob
     B:replicatorPop=false
     D:replicatorPopWhenThunderPerSecond=0.008333333333333333
 }
@@ -68,6 +89,7 @@ fuelgenerator {
 
 
 gameplay {
+    # Make explosions a bit bigger
     B:explosion=true
 }
 
@@ -76,17 +98,30 @@ general {
     # Enable Analytics for Electrical Age
     B:analyticsEnable=false
 
-    # Opt into sending player UUID when sending analytics (default DISABLED)
+    # Opt into sending player UUID when sending analytics
     B:analyticsPlayerOptIn=false
 
     # Set update checker URL
     S:analyticsURL=http://eln.ja13.org/stat
+
+    # Enables direct air to ground poles - WARNING: Can cause MAJOR performance impact!
+    B:directPoles=false
+
+    # Set this to false to enable grinch mode
+    B:enableFestiveItems=true
+
+    # Show the item instead of the electrical symbol as an icon
     B:noSymbols=false
+
+    # Disable colored background to items
     B:noVoltageBackground=false
     S:playerUUID=3bfb0d34-4dab-4271-aa46-5bb0562d4a1c
 
     # Enable version checker
     B:versionCheckEnable=false
+
+    # Set this to true to craft with vertical ingots instead of horizontal ones
+    B:verticalIronCableCrafting=false
 }
 
 
@@ -96,6 +131,7 @@ lamp {
     D:incandescentLifeInHours=16.0
     B:infiniteLedLife=false
     D:ledLifeInHours=512.0
+    B:swingingLamps=true
 }
 
 
@@ -109,19 +145,28 @@ mapgenerate {
 
 
 modbus {
+    # Enable Modbus RTU
     B:enable=false
+
+    # TCP Port for Modbus RTU
     I:port=1502
 }
 
 
 simulation {
+    # Set to a clean divisor of 20
     I:electricalFrequency=20
+
+    # You don't want to set this lower than 50.
     I:electricalInterSystemOverSampling=50
+
+    # I wouldn't touch this one either
     I:thermalFrequency=400
 }
 
 
 wireless {
+    # Maximum range for wireless transmitters to be recieved, as well as lamp supplies
     I:txRange=32
 }
 
@@ -129,6 +174,8 @@ wireless {
 xrayscannerconfig {
     B:addOtherModOreToXRay=true
     B:canBeCrafted=true
+
+    # X-Ray Scanner range; set between 4 and 10 blocks
     D:rangeInBloc=5.0
 }
 
