--- a/config/Netherlicious/Worldgeneration_Configuration.cfg
+++ b/config/Netherlicious/Worldgeneration_Configuration.cfg
@@ -9,10 +9,17 @@
     B:"1 Nether, Generate Regular Mushrooms throughout the Nether."=false
     B:"Abyssal Shadowland, Generate Void Quartz Ore."=true
     B:"Basalt Deltas, Generate Big Basalt Pillars."=false
+    B:"Basalt Deltas, Generate Smoke and Flame Vents."=true
     B:"Crimson Forest, Generate Spectral Dew Lakes in Crimson Forest."=true
     B:"Foxfire Swamp, Generate a Lava Ocean under the Swamp. If false generate Terrain instead."=false
     B:"Soul Sand Valley, Generate Gloomstone instead of Glowstone in Soul Sand Valley."=true
     B:"Warped Forest, Generate Spectral Dew Lakes in Warped Forest."=true
+}
+
+
+"3 bedrock" {
+    B:"If true, Bedrock will generate only one layer, making it smooth"=true
+    B:"Should the Ceiling be made out of bedrock, mobs will start spawning if it's not bedrock"=true
 }
 
 
