--- a/config/NuclearCraft/NCConfig.cfg
+++ b/config/NuclearCraft/NCConfig.cfg
@@ -323,13 +323,13 @@
 2 {
 
     "0: mobs" {
-        #  [default: true]
+        #  [default: false]
         B:"Enable Brian"=false
 
         #  [default: true]
         B:"Enable Nuclear Monsters Spawning"=true
 
-        #  [default: true]
+        #  [default: false]
         B:"Enable Paul"=false
     }
 
@@ -337,7 +337,7 @@
         #  [range: 0 ~ 10, default: 2]
         I:"Dungeon Loot Frequency"=2
 
-        #  [default: true]
+        #  [default: false]
         B:"Enable EMP Weapon"=true
 
         #  [default: true]
