--- a/config/OpenComputers.cfg
+++ b/config/OpenComputers.cfg
@@ -5,6 +5,21 @@
 # Note that all mentions of 'KB' or 'kilobyte' mean 1024 bytes.
 opencomputers {
 
+  # Chunkloader Upgrade settings.
+  chunkloader {
+
+    # This is a list of blacklisted dimensions. Chunkloaders may only be activated
+    # in dimensions that aren't present in this list.
+    dimBlacklist=[]
+
+    # This is a list of whitelisted dimensions. Chunkloaders may only be activated
+    # in dimensions that are present in this list. If this list is empty,
+    # chunkloaders may be activated to all dimensions not blacklisted. Note that the
+    # blacklist is always applied, so if an entry is present in both the
+    # whitelist and the blacklist, the blacklist will win.
+    dimWhitelist=[]
+  }
+
   # Client side settings, presentation and performance related stuff.
   client {
 
@@ -146,11 +161,12 @@ opencomputers {
     canComputersBeOwned=true
 
     # The number of components the different CPU tiers support. This list
-    # must contain exactly three entries, or it will be ignored.
+    # must contain exactly four entries, or it will be ignored.
     cpuComponentCount=[
       8,
       12,
-      16
+      16,
+      1024
     ]
 
     # The maximum size of the byte array that can be stored on EEPROMs as configuration data.
@@ -189,6 +205,10 @@ opencomputers {
       # are not sandboxed (hooks are disabled while they run), this is not
       # recommended.
       allowGC=false
+
+      # Whether to make the Lua 5.3 architecture the default architecture.
+      # If enabled, a crafted CPU will first be the Lua 5.3 architecture.
+      defaultLua53=true
 
       # Whether to make the Lua 5.3 architecture available. If enabled, you
       # can reconfigure any CPU to use the Lua 5.3 architecture.
@@ -231,6 +251,15 @@ opencomputers {
         1024
       ]
     }
+
+    # The maximum depth a machine will queue signals before dropping them
+    # A machine state should be pulling signals via computer.pullSignal
+    # As the machine receives signals they are queued for pulling, and
+    # this maximum defines the max queue size. All signals recieved when
+    # the queue is full are discarded. Note that clipboard text creates
+    # a signal for each line of text. Thus client are limited to pasting
+    # text of this many lines. The default (and minimum) is 256
+    maxSignalQueueSize=256
 
     # Sanity check for username length for users registered with computers. We
     # store the actual user names instead of a hash to allow iterating the
@@ -456,6 +485,27 @@ opencomputers {
     # The size of the /tmp filesystem that each computer gets for free. If
     # set to a non-positive value the tmp file system will not be created.
     tmpSize=64
+  }
+
+  # Graphics Card Component Settings
+  gpu {
+
+    # This setting assigns the budget call cost to invoke bitblt to write vram
+    # to a screen. Video ram can bitblit to a screen which can cause real life
+    # network laod the defaults settings put bitblit network impact close to gpu.set
+    # Increase these values to throttle bitblt more. The cost tier N is bitbltCost * 2^(tier)
+    # default is .5, which gives: .5, 1, 4
+    bitbltCost=0.5
+
+    # Video ram can be allocated on a gpu. The amount of vram you can allocate
+    # is equal to the width*height of the max resolution of the gpu multiplied
+    # by the "vramSize" for that tier. For example, a T2 gpu can have 80*25*2 of
+    # text buffer space allocated
+    vramSizes=[
+      1,
+      2,
+      3
+    ]
   }
   hologram {
 
@@ -722,7 +772,13 @@ opencomputers {
 
     # The maximum number of ports a single network card can have opened at
     # any given time.
-    maxOpenPorts=16
+    # Note that the order for this list is: Wired Network Card -> Tier 1 Wireless
+    #   Network Card -> Tier 2 Wireless Network Card
+    maxOpenPorts=[
+      16,
+      1,
+      16
+    ]
 
     # The maximum height of multi-block screens, in blocks. This is limited to
     # avoid excessive computations for merging screens. If you really need
@@ -741,7 +797,11 @@ opencomputers {
     # which may or may not lead to performance issues for ridiculous ranges -
     # like, you know, more than the loaded area.
     # See also: `wirelessCostPerRange`.
-    maxWirelessRange=400
+    # These values are for the tier 1 and 2 wireless cards, in that order.
+    maxWirelessRange=[
+      16,
+      400
+    ]
 
     # Radius the MFU is able to operate in
     mfuRange=3
@@ -953,6 +1013,29 @@ opencomputers {
 
       # The amount a tablet can store in its internal buffer.
       tablet=10000
+    }
+
+    # Carpeted Capacitor settings
+    # Carpeted Capacitors generate power when sheep or ocelots walk on them
+    # Power is generated when at least 2 of a type of animal are present.
+    # A single sheep and a single ocelot generates no power. Note that a
+    # computer constantly flashing the screen from white to black drains
+    # approximately 36 units of power per second. Thus, as an example with the
+    # default values, it would take 12 carpeted capacitors and 24 sheep
+    # (2 each) to keep the charge rate. Or, 6 carpeted capacitors and 12
+    # ocelots to do the same. Values are: units of power per carpeted
+    # capacitor per second with 2 animals of a type.
+    carpetedCapacitors {
+
+      # Chance one animal (per capacitor) will take some damage per minute
+      # Damage chance is only dealt when power is generated
+      damageChance=0.001
+
+      # power generated from ocelots
+      ocelotPower=6
+
+      # power generated from sheep
+      sheepPower=3
     }
 
     # The amount of energy a Charger transfers to each adjacent robot per tick
@@ -1179,7 +1262,11 @@ opencomputers {
       # 400 * `wirelessCostPerRange`. In other words, the higher this value,
       # the higher the cost of wireless messages.
       # See also: `maxWirelessRange`.
-      wirelessCostPerRange=0.05
+      # These values are for the tier 1 and 2 wireless cards, in that order.
+      wirelessCostPerRange=[
+        0.05,
+        0.05
+      ]
     }
 
     # The amount of energy the disassembler can apply per tick. This
@@ -1567,6 +1654,6 @@ opencomputers {
   # The version of OC this config was generated by. This is used to allow the
   # mod to reset parts of the config when their meaning changed across
   # versions, so that the user does not have to delete it.
-  version="1.7.1.1127"
+  version="1.7.7+3d2bec9"
 
 }
