--- a/config/foamfix.cfg
+++ b/config/foamfix.cfg
@@ -1,6 +1,9 @@
 # Configuration file
 
 bugfixes {
+    # Fix BiblioRCE exploit.
+    B:biblioRceExploitFix=true
+
     # Reduce the amount of boat desynchronization between client and server. (from BugfixMod by williewillus)
     B:clientBoatDesyncFix=true
 
@@ -24,6 +27,9 @@ bugfixes {
 
     # Fix native memory leak in JarDiscoverer (from Forkage by immibis)
     B:jarDiscovererMemoryLeakFix=true
+
+    # Fix Log4j formatting exploit.
+    B:log4jExploitFix=true
 
     # Fix projectiles that deal 0 damage not knocking back players. (from BugfixMod by williewillus)
     B:snowballFix=false
@@ -78,6 +84,12 @@ tweaks {
 
     # Adds AI tasks that make chickens attracted to all items they can breed with, not just seeds. (from BugfixMod by williewillus)
     B:chickenLureFix=true
+
+    # Add support for Minecraft 1.8+ skins.
+    B:mc18SkinSupport=true
+
+    # Fix opening URLs on Linux-based installs.
+    B:openUrlLinux=true
 
     # Blacksmith houses generate with an anvil where there was a double stone slab (which was supposed to be an "anvil" anyway). (from BugfixMod by williewillus)
     B:villageAnvils=true
