disable 18 skin support due to lumy

--- a/config/foamfix.cfg
+++ b/config/foamfix.cfg
@@ -86,7 +86,7 @@ tweaks {
     B:chickenLureFix=true
 
     # Add support for Minecraft 1.8+ skins.
-    B:mc18SkinSupport=true
+    B:mc18SkinSupport=false
 
     # Fix opening URLs on Linux-based installs.
     B:openUrlLinux=true
