--- a/config/archaicfix.cfg
+++ b/config/archaicfix.cfg
@@ -71,7 +71,7 @@ general {
 
     # Fix TileEntity unloading being laggy.
     # [default: true]
-    B:fixTEUnloadLag=true
+    B:fixTEUnloadLag=false
 
     # Fix the 'TickNextTick list out of synch' error.
     # [default: true]
