adjust immersive cavegen

--- a/config/immersivecavegen.cfg
+++ b/config/immersivecavegen.cfg
@@ -129,7 +129,7 @@
     B:"Generate Water Caves"=true
 
     # Living caves that spawn under swamps not only have some occasional trees and flowers but also dirt, grass etc. [default: false]
-    B:"Lush Living Caves"=false
+    B:"Lush Living Caves"=true
 }
 
 
@@ -337,7 +337,7 @@ reduction {
     B:"Enable Mineshafts Spawn"=true
 
     # Applies the nether stalactites, plants etc. in worldgen to the nether as well. A bit wacky, so off by default. [default: false]
-    B:"Enable Nether Decoration"=false
+    B:"Enable Nether Decoration"=true
 
     # Gives option to disable strongholds from spawning. [default: true]
     B:"Enable Stronghold Spawn"=true
@@ -352,7 +352,7 @@ reduction {
     B:"Exteme Cave Gen"=false
 
     # Note: This will only affect caves that *can* be big. There are going to be some small caves even if you turn this to 100. Note 2: This is NOT percentages. 100 does not mean caves have 100% chance to be big, it simply means they're 100 'x' more likely to be big. [range: 0 ~ 100, default: 0]
-    I:"Extra Mega Cave Chance"=0
+    I:"Extra Mega Cave Chance"=7
 
     # 1 - Lava, 2 - Water. NOTE: As many things, doesn't support old cave gen option. [range: 1 ~ 2, default: 1]
     I:"Filled Caves Spawn Mechanism"=1
@@ -379,7 +379,7 @@ reduction {
     B:"Realistic Cobwebs"=true
 
     # As an attempt to create something similar to subterranean waters, some caves in and around 'deep ocean's have a separate fixed average Y level below which they're flooded with water. [default: true]
-    B:"Separate Flooded Y Level"=true
+    B:"Separate Flooded Y Level"=false
 
     # Custom items, blocks etc. will not be registered effectively allowing the mod to be server-only. Note: Because of https://github.com/MinecraftForge/FML/issues/510 vanilla clients can't join. Nothing I can do, if you know a way around this please notify me. [default: false]
     B:"Server Only"=false
