update config files

--- a/config/AWWayofTime.cfg
+++ b/config/AWWayofTime.cfg
@@ -435,6 +435,9 @@ wellofsufferingblacklist {
     B:"Botania.botania:pinkWither"=false
     B:"Botania.botania:pixie"=false
     B:Brian=false
+    B:BrownSpider=false
+    B:BrownSpiderLarge=false
+    B:BrownSpiderSmall=false
     B:"BuildCraft|Robotics.bcRobot"=false
     B:CaveSpider=false
     B:Chicken=false
@@ -457,6 +460,7 @@ wellofsufferingblacklist {
     B:GalacticraftMars.Sludgeling=false
     B:Ghast=false
     B:Giant=false
+    B:GlowSlime=false
     B:HardcoreEnderExpansion.AngryEnderman=false
     B:HardcoreEnderExpansion.BabyEnderman=false
     B:HardcoreEnderExpansion.Dragon=false
@@ -565,6 +569,8 @@ wellofsufferingblacklist {
     B:WitherBoss=false
     B:Wolf=false
     B:Zombie=false
+    B:alienBug=false
+    B:alienVillagerAR=false
     B:arsmagica2.AirSled=false
     B:arsmagica2.BattleChicken=false
     B:arsmagica2.BossAirGuardian=false
@@ -625,6 +631,29 @@ wellofsufferingblacklist {
     B:extraplanets.EvolvedSnowmanBoss=false
     B:extraplanets.EvolvedWitch=false
     B:herobrine=false
+    B:netherlicious.Ashling=false
+    B:netherlicious.BlazeKnight=false
+    B:netherlicious.CrimsonRay=false
+    B:netherlicious.Ember=false
+    B:netherlicious.EmberFoxfire=false
+    B:netherlicious.EmberShadow=false
+    B:netherlicious.EmberSoul=false
+    B:netherlicious.FoxfireRay=false
+    B:netherlicious.Hoglin=false
+    B:netherlicious.Piglin=false
+    B:netherlicious.Skull=false
+    B:netherlicious.Smolder=false
+    B:netherlicious.SporeCrimson=false
+    B:netherlicious.SporeFoxfire=false
+    B:netherlicious.SporeWarped=false
+    B:netherlicious.Strider=false
+    B:netherlicious.WarpedRay=false
+    B:netherlicious.Zoglin=false
+    B:netherlicious.ZombiePiglin=false
+    B:osirisBoss=false
+    B:porcodon=false
+    B:robotVillager=false
+    B:sentryRobot=false
     B:witherSkeleton=false
 }
 
