--- a/config/IC2.cfg
+++ b/config/IC2.cfg
@@ -47,6 +47,9 @@ general {
     # Config for None IC2 Wrenches to be lossless Mode. By default disabled!
     B:"Lossless None IC2 Wrenches"=false
 
+    # Allows to add Boots to the magnitzer registry
+    S:"Magnetizer Boots Registry"=minecraft:golden_boots, minecraft:iron_boots, minecraft:chainmail_boots
+
     # Master Volume that you can change ingame. Please do not change it. If you really want to then do a number between 0-1
     D:"Master Sound Volume"=0.5
 
@@ -141,6 +144,9 @@ general {
 
     # Factor to adjust the ore generation rate
     S:oreDensityFactor=1.0
+
+    # List of blocks and items which should not be turned into scrap by the recycler. Comma separated, format is id(Block/ItemName)-metadata
+    S:recyclerBlacklist=minecraft:glass_pane, minecraft:stick, minecraft:snowball, IC2:scaffold, Forestry:beeQueenGE, Forestry:beePrincessGE
 
     # Maximum number of audio sources, only change if you know what you're doing
     I:soundSourceLimit=32
