--- a/config/cofh/thermalexpansion/florbs.cfg
+++ b/config/cofh/thermalexpansion/florbs.cfg
@@ -529,6 +529,7 @@ Whitelist {
     B:slime.blue=true
     B:sludge=true
     B:soularium.molten=true
+    B:spectral_dew=true
     B:steam=true
     B:steel.molten=true
     B:stone.seared=true
