--- a/config/mekanism/MekanismGenerators.cfg
+++ b/config/mekanism/MekanismGenerators.cfg
@@ -3,8 +3,12 @@
 generation {
     D:AdvancedSolarGeneration=300.0
     D:BioGeneration=350.0
+    I:BiogasDuration=1
     B:EnableWindmillWhitelist=true
+    I:EthanolDuration=2
+    D:EthanolMultiplier=3.0
     D:HeatGeneration=150.0
+    I:HeatGenerationFluidRate=10
     D:HeatGenerationLava=5.0
     D:HeatGenerationNether=100.0
     D:SolarGeneration=50.0
