--- a/config/mekanism/MekanismRecipes.cfg
+++ b/config/mekanism/MekanismRecipes.cfg
@@ -68,6 +68,7 @@ recipes {
     B:enableFuelwoodHeater=true
     B:enableGasTanks=true
     B:enableGaugeDropper=true
+    B:enableGlowstoneBlock=true
     B:enableHDPEParts=true
     B:enableInductionCasing=true
     B:enableInductionCells=true
