--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -16,10 +16,18 @@ battery {
 
 
 client {
+    # Possible Values: BUTTON, TILE
+    S:CRAFTING_STATUS=TILE
+    I:InterfaceTerminalSmallSize=6
+    I:MEMonitorableSmallSize=6
+
     # Possible Values: AE, EU, WA, RF, MK
     S:PowerUnit=RF
 
-    # Possible Values: AUTOSEARCH, MANUAL_SEARCH, NEI_AUTOSEARCH, NEI_MANUAL_SEARCH
+    # Possible Values: YES, NO, UNDECIDED
+    S:SAVE_SEARCH=NO
+
+    # Possible Values: MANUAL_SEARCH, AUTOSEARCH, NEI_AUTOSEARCH, NEI_MANUAL_SEARCH
     S:SEARCH_MODE=AUTOSEARCH
 
     # Possible Values: YES, NO, UNDECIDED
@@ -53,6 +61,7 @@ client {
 
     # Controls buttons on Level Emitter Screen : Capped at 9999
     I:levelAmtButton4=1000
+    B:preserveSearchBar=true
 
     # Controls buttons on Priority Screen : Capped at 9
     I:priorityAmtButton1=1
@@ -65,6 +74,7 @@ client {
 
     # Controls buttons on Priority Screen : Capped at 9999
     I:priorityAmtButton4=1000
+    B:showOnlyInterfacesWithFreeSlotsInInterfaceTerminal=false
     B:useColoredCraftingStatus=true
     B:useTerminalUseLargeFont=false
 }
@@ -78,6 +88,14 @@ condenser {
 
 craftingcpu {
     I:craftingCalculationTimePerTick=5
+}
+
+
+debug {
+    B:EnableP2pBackboneTransfer=false
+    B:EnableQuantumBridgeBackboneTransfer=false
+    B:LogPathFinding=false
+    B:LogTiming=false
 }
 
 
@@ -165,6 +183,7 @@ features {
 
     p2ptunnels {
         B:P2PTunnelEU=true
+        B:P2PTunnelGregtech=true
         B:P2PTunnelItems=true
         B:P2PTunnelLight=true
         B:P2PTunnelLiquids=true
@@ -268,14 +287,17 @@ modintegration {
     S:BuildCraftBuilders=AUTO
     S:BuildCraftCore=AUTO
     S:BuildCraftTransport=AUTO
+    S:Chisel=AUTO
     S:ColoredLightsCore=AUTO
     S:CraftGuide=AUTO
     S:DeepStorageUnit=AUTO
     S:Factorization=AUTO
     S:ForgeMultiPart=AUTO
+    S:GregTech=AUTO
     S:ImmibisMicroblocks=AUTO
     S:IndustrialCraft2=AUTO
     S:InventoryTweaks=AUTO
+    S:Jabba=AUTO
     S:Mekanism=AUTO
     S:MineFactoryReloaded=AUTO
     S:NotEnoughItems=AUTO
@@ -300,6 +322,9 @@ orecamouflage {
     # OreDictionary Names: dustEnder,dustEnderPearl
     B:EnderDust=true
 
+    # OreDictionary Names: dustWheat
+    B:Flour=true
+
     # OreDictionary Names: dustGold
     B:GoldDust=true
 
@@ -322,6 +347,7 @@ powerratios {
     D:Mekanism=0.2
     D:RotaryCraft=8.884150675195451E-5
     D:ThermalExpansion=0.5
+    D:TunnelPowerLoss=0.05
     D:UsageMultiplier=1.0
 }
 
@@ -355,6 +381,7 @@ tickrates {
     I:Interface.min=5
     I:ItemTunnel.max=60
     I:ItemTunnel.min=5
+    I:LevelEmitterDelay=40
     I:LightTunnel.max=120
     I:LightTunnel.min=5
     I:METunnel.max=20
