--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -65,8 +65,21 @@ modules {
     B:harvestability.silktouchability.sneakingonly=false
     B:harvestability.toolrequiredonly=true
     B:harvestability.unharvestableonly=false
+    B:ic2.cable.color=true
+    B:ic2.cable.loss=true
+    B:ic2.cable.max=true
+    B:ic2.cont.in=true
+    B:ic2.cont.info=true
+    B:ic2.cont.prod=true
+    B:ic2.cont.use=true
     B:ic2.outputeu=true
+    B:ic2.sink.in=true
+    B:ic2.sink.req=true
+    B:ic2.source.packets=true
+    B:ic2.source.prov=true
     B:ic2.storage=true
+    B:ic2.storage.info=true
+    B:ic2.storage.tele=true
     B:oc.address=true
     B:oc.componentName=true
     B:oc.energy=true
@@ -144,8 +157,21 @@ server_forcing {
     B:harvestability.silktouchability.sneakingonly=false
     B:harvestability.toolrequiredonly=false
     B:harvestability.unharvestableonly=false
+    B:ic2.cable.color=false
+    B:ic2.cable.loss=false
+    B:ic2.cable.max=false
+    B:ic2.cont.in=false
+    B:ic2.cont.info=false
+    B:ic2.cont.prod=false
+    B:ic2.cont.use=false
     B:ic2.outputeu=false
+    B:ic2.sink.in=false
+    B:ic2.sink.req=false
+    B:ic2.source.packets=false
+    B:ic2.source.prov=false
     B:ic2.storage=false
+    B:ic2.storage.info=false
+    B:ic2.storage.tele=false
     B:oc.address=false
     B:oc.componentName=false
     B:oc.energy=false
