--- a/config/falsepatternlib.cfg
+++ b/config/falsepatternlib.cfg
@@ -19,8 +19,16 @@ general {
 
 
 toasts {
+    # Which side of the screen should toasts show up on
+    # [default: Right, possible values: [Right, Left]]
     S:ALIGN=Right
+
+    # The maximum amount of toasts to show on the screen
+    # [range: 1 ~ 10, default: 5]
     I:MAX_VISIBLE=5
+
+    # The amount of empty space from the top of the screen in pixels
+    # [range: 0 ~ 10000, default: 0]
     I:Y_OFFSET=0
 }
 
