--- a/config/mekanism/Mekanism.cfg
+++ b/config/mekanism/Mekanism.cfg
@@ -32,6 +32,9 @@ general {
     B:ControlCircuitOreDict=true
     I:CopperPerChunk=0
     B:DestroyDisabledBlocks=true
+
+    # Select range from 1 to 64, we do not recommend going over 32
+    I:DigitalMinerMaxRadius=32
     I:DisassemblerEnergyUsage=10
     B:DynamicTankEasterEgg=false
     D:EUToJoules=0.1
@@ -52,6 +55,12 @@ general {
 
     # Determines Electrolytic Separator usage
     D:HydrogenEnergyDensity=200.0
+
+    # Tier level for machines, we recommend setting it to tier 2 for ic2 classic
+    I:IC2SinkTier=4
+
+    # Tier level for generators, we recommend setting it to tier 2 for ic2 classic
+    I:IC2SourceTier=4
     D:JoulesToEU=10.0
     D:JoulesToRF=2.5
     I:LaserDiggingEnergy=100000
