--- a/config/UpdateCheckLib.cfg
+++ b/config/UpdateCheckLib.cfg
@@ -2,7 +2,7 @@
 
 _general {
     # Set this to false to disable this mod [default: true]
-    B:enable=true
+    B:enable=false
 
     # If true, results that errored won't be shown [default: false]
     B:hideErrored=false
@@ -14,7 +14,7 @@ _general {
 
 interface {
     # Show updates button in main menu when there are updates available [default: true]
-    B:showUpdatesButton=true
+    B:showUpdatesButton=false
 
     # true: the X and Y are absolute coordinates
     # false: the X and Y is relative to WIDTH/2 and HEIGHT/4 respectively (which is how the buttons are placed in the vanilla menu GUI) [default: false]
