--- a/config/immersivecavegen.cfg
+++ b/config/immersivecavegen.cfg
@@ -349,10 +349,10 @@ reduction {
     B:"Enable World Population Changes"=true
 
     # Makes the world underground a HUGE cavern system. A bit extreme, not many will like it, but the option is there. (Note: Does not work with Old Cave Gen option) [default: false]
-    B:"Exteme Cave Gen"=false
+    B:"Exteme Cave Gen"=true
 
     # Note: This will only affect caves that *can* be big. There are going to be some small caves even if you turn this to 100. Note 2: This is NOT percentages. 100 does not mean caves have 100% chance to be big, it simply means they're 100 'x' more likely to be big. [range: 0 ~ 100, default: 0]
-    I:"Extra Mega Cave Chance"=7
+    I:"Extra Mega Cave Chance"=10
 
     # 1 - Lava, 2 - Water. NOTE: As many things, doesn't support old cave gen option. [range: 1 ~ 2, default: 1]
     I:"Filled Caves Spawn Mechanism"=1
