--- a/config/immersivecavegen.cfg
+++ b/config/immersivecavegen.cfg
@@ -295,10 +295,10 @@ reduction {
     B:"Cave Spider Spawner Spawns Always"=false
 
     # Value from 0 to 50. The default is 1, which is how they generate normally. [range: 0 ~ 50, default: 1]
-    I:"Caverns Spawn Frequency Multiplier"=2
+    I:"Caverns Spawn Frequency Multiplier"=1
 
     # Value from 0 to 50, 0 totally turning off caves and 50 being a world totally filled with them. The default is 1, which is how they generate in vanilla minecraft. [range: 0 ~ 50, default: 1]
-    I:"Caves Spawn Frequency Multiplier"=2
+    I:"Caves Spawn Frequency Multiplier"=1
 
     # The bigger the number, the more likely a stalactite/staalagmite/glowshroom/other decoration will spawn for every block of a cave. [range: 0.0 ~ 1.0, default: 0.8]
     S:"Decoration Density Modifier"=0.8
@@ -346,7 +346,7 @@ reduction {
     B:"Enable Village Spawn"=true
 
     # Disables liquid source block and lake spawn changes and toggles for stucture spawns, for better mod compatibility. If something conflicts with another mod, the first thing you should try disabling is this. The second is 'Separate Flooded Y Level'. [default: true]
-    B:"Enable World Population Changes"=true
+    B:"Enable World Population Changes"=false
 
     # Makes the world underground a HUGE cavern system. A bit extreme, not many will like it, but the option is there. (Note: Does not work with Old Cave Gen option) [default: false]
     B:"Exteme Cave Gen"=true
