update config files

--- a/config/InfernalMobs.cfg
+++ b/config/InfernalMobs.cfg
@@ -17,10 +17,12 @@ entitiesalwaysinfernal {
 
 entitybasehealth {
     D:EntityBabySkeleton=30.0
+    D:EntityConcussionCreeper=400.0
     D:EntityCreeper=20.0
     D:EntityMobEnderman=60.0
     D:EntityNuclearMonster=60.0
     D:EntitySkeleton=20.0
+    D:EntitySpider=288.0
     D:EntityZombie=20.0
 }
 
