--- a/config/archaicfix.cfg
+++ b/config/archaicfix.cfg
@@ -29,12 +29,16 @@ general {
     # [default: false]
     B:disableBlockingChunkUpdates=false
 
+    # Disable Food Plus' update message.
+    # [default: true]
+    B:disableFoodPlusUpdates=true
+
     # Disable OptiFine's version checker.
     # [default: true]
     B:disableOFVersionCheck=true
 
     # Disable spawn chunks
-    # [default: true]
+    # [default: false]
     B:disableSpawnChunks=true
 
     # Prevents buttons from showing a yellow text color when hovered, as was done in 1.14+.
@@ -44,6 +48,10 @@ general {
     # Enables the 1.8-style occlusion culling originally developed by CoFHTweaks. Not compatible with OptiFine or FastCraft.
     # [default: false]
     B:enableOcclusionTweaks=false
+
+    # When true, the Phosphor backport is enabled. Disabling is not recommended as it will generally add lag.
+    # [default: true]
+    B:enablePhosphor=true
 
     # EXPERIMENTAL: Enables multi-threaded chunk updating. At the moment it only works if enableOcclusionTweaks is turned on.
     # [default: false]
@@ -81,6 +89,10 @@ general {
     # [default: true]
     B:fixVanillaCascadingWorldgen=true
 
+    # When true, dropped items will always render as though fancy graphics are enabled.
+    # [default: false]
+    B:forceFancyItems=false
+
     # 
     # [default: true]
     B:hideDownloadingTerrainScreen=true
@@ -101,9 +113,6 @@ general {
     # Reduce lag caused by item entities
     # [default: true]
     B:itemLagReduction=true
-
-    # Prevent the integrated server from loading chunks when it doesn't necessarily need to. Can greatly improve performance on teleports, etc at the cost of slower chunkloading.
-    # [default: false]
     B:lazyChunkLoading=false
 
     # Log when cascading worldgen occurs.
@@ -113,6 +122,14 @@ general {
     # Print a stacktrace when cascading worldgen occurs. Use only for development as this will add more lag in game.
     # [default: false]
     B:logCascadingWorldgenStacktrace=false
+
+    # Tweak F3 screen to be closer to modern versions.
+    # [default: true]
+    B:modernizeF3Screen=true
+
+    # Replace tall grass texture with modern version.
+    # [default: false]
+    B:modernizeTextures=false
 
     # What the maximum render distance should be if raiseMaxRenderDistance is enabled.
     # [range: 16 ~ 128, default: 32]
@@ -153,6 +170,10 @@ general {
     # Increase the maximum render distance if OptiFine and FastCraft are not installed.
     # [default: false]
     B:raiseMaxRenderDistance=false
+
+    # Remove JourneyMap debug feature.
+    # [default: false]
+    B:removeJourneymapDebug=false
 
     # Show block registry name and meta value in F3, similar to 1.8+.
     # [default: false]
