--- a/config/craftpresence.properties
+++ b/config/craftpresence.properties
@@ -2,7 +2,7 @@
 #Current Version -> v1.8.8 (Schema v2)
 #
 #Last synchronized:
-#Tue Dec 27 23:47:09 CET 2022
+#Fri Apr 07 21:18:16 CEST 2023
 Enable_Per-Gui_System=false
 Strip_Translation_Colors=false
 Debug_Mode=false
