--- a/config/mekanism/Mekanism.cfg
+++ b/config/mekanism/Mekanism.cfg
@@ -42,6 +42,7 @@ general {
     B:EnablePoorOresCompat=true
     B:EnableQuartzCompat=true
     B:EnableSiliconCompat=true
+    B:EnableSingleUseCardboxes=true
     B:EnableWorldRegeneration=false
     D:EnergyPerHeat=1000.0
     D:EnergyPerRedstone=10000.0
