--- a/config/minechem.cfg
+++ b/config/minechem.cfg
@@ -46,6 +46,9 @@ general {
     # Add Molecule Effects to the item tooltip
     B:displayMoleculeEffects=true
 
+    # Enable the recipe that lets the player get 8 H2O from a water bucket by putting the water bucket in a crafting grid by itself.
+    B:enableWaterBucketIntoH2ORecipe=true
+
     # Enable fluid Effects
     B:fluidEffects=true
 
@@ -72,6 +75,9 @@ general {
 
     # Model update radius
     I:updateRadius=20
+
+    # Allow users to place things by having eight vials in their inventory
+    B:vialPlacing=true
 }
 
 
