--- a/config/rftools/dimlets.cfg
+++ b/config/rftools/dimlets.cfg
@@ -103,6 +103,7 @@ dimletsettings {
     I:rarity.Liquid.oil=3
     I:rarity.Liquid.pinkslime=3
     I:rarity.Liquid.pyrotheum=5
+    I:rarity.Liquid.quartz.molten=6
     I:rarity.Liquid.redstone=5
     I:rarity.Liquid.refined.glowstone.molten=4
     I:rarity.Liquid.rocket_fuel=3
@@ -384,6 +385,7 @@ dimletsettings {
     I:rfcreate.Liquid.oil=15000
     I:rfcreate.Liquid.pinkslime=8000
     I:rfcreate.Liquid.pyrotheum=30000
+    I:rfcreate.Liquid.quartz.molten=25000
     I:rfcreate.Liquid.redstone=30000
     I:rfcreate.Liquid.refined.glowstone.molten=5000
     I:rfcreate.Liquid.rocket_fuel=15000
@@ -666,6 +668,7 @@ dimletsettings {
     I:rfmaintain.Liquid.oil=3000
     I:rfmaintain.Liquid.pinkslime=2000
     I:rfmaintain.Liquid.pyrotheum=10000
+    I:rfmaintain.Liquid.quartz.molten=12500
     I:rfmaintain.Liquid.redstone=10000
     I:rfmaintain.Liquid.refined.glowstone.molten=1000
     I:rfmaintain.Liquid.rocket_fuel=3000
@@ -946,6 +949,7 @@ dimletsettings {
     I:ticks.Liquid.oil=300
     I:ticks.Liquid.pinkslime=150
     I:ticks.Liquid.pyrotheum=800
+    I:ticks.Liquid.quartz.molten=2000
     I:ticks.Liquid.redstone=800
     I:ticks.Liquid.refined.glowstone.molten=400
     I:ticks.Liquid.rocket_fuel=300
