--- a/config/splash.properties
+++ b/config/splash.properties
@@ -1,5 +1,5 @@
 #Splash screen properties
-#Tue Dec 27 23:46:56 CET 2022
+#Fri Apr 07 21:18:10 CEST 2023
 logoTexture=textures/gui/title/mojang.png
 background=0xFFFFFF
 font=0x0
