--- a/config/AWWayofTime.cfg
+++ b/config/AWWayofTime.cfg
@@ -68,6 +68,43 @@ clientsettings {
 }
 
 
+"energy items" {
+    I:"Energy Bazooka LP per activation"=50
+    I:"Energy Bazooka LP per shot"=20000
+    I:"Energy Bazooka Tier II LP per activation"=50
+    I:"Energy Bazooka Tier II LP per shot"=20000
+    I:"Energy Bazooka Tier II damage"=12
+    I:"Energy Bazooka Tier II maximum delay"=150
+    I:"Energy Bazooka Tier II maximum delay after (re-)activation"=100
+    I:"Energy Bazooka Tier II secondary damage"=15
+    I:"Energy Bazooka Tier III LP per activation"=50
+    I:"Energy Bazooka Tier III LP per shot"=20000
+    I:"Energy Bazooka Tier III damage"=12
+    I:"Energy Bazooka Tier III maximum delay"=150
+    I:"Energy Bazooka Tier III maximum delay after (re-)activation"=100
+    I:"Energy Bazooka Tier III secondary damage"=15
+    I:"Energy Bazooka damage"=12
+    I:"Energy Bazooka maximum delay"=150
+    I:"Energy Bazooka maximum delay after (re-)activation"=100
+    I:"Energy Bazooka secondary damage"=15
+    I:"Energy Blast LP per activation"=50
+    I:"Energy Blast LP per shot"=150
+    I:"Energy Blast Tier II LP per activation"=50
+    I:"Energy Blast Tier II LP per shot"=150
+    I:"Energy Blast Tier II damage"=12
+    I:"Energy Blast Tier II maximum delay"=15
+    I:"Energy Blast Tier II maximum delay after (re-)activation"=100
+    I:"Energy Blast Tier III LP per activation"=50
+    I:"Energy Blast Tier III LP per shot"=150
+    I:"Energy Blast Tier III damage"=12
+    I:"Energy Blast Tier III maximum delay"=15
+    I:"Energy Blast Tier III maximum delay after (re-)activation"=100
+    I:"Energy Blast damage"=12
+    I:"Energy Blast maximum delay"=15
+    I:"Energy Blast maximum delay after (re-)activation"=100
+}
+
+
 ##########################################################################################################
 # lp costs
 #--------------------------------------------------------------------------------------------------------#
@@ -381,6 +418,287 @@ orecrushing {
         B:Resistance=false
         B:Thunderstorm=false
         B:Zombie=false
+    }
+
+}
+
+
+"rune overrides" {
+    S:fifthTier <
+        AWWayofTime:AlchemicalWizardrybloodRune:0
+        AWWayofTime:speedRune:0
+        AWWayofTime:efficiencyRune:0
+        AWWayofTime:runeOfSacrifice:0
+        AWWayofTime:runeOfSelfSacrifice:0
+        AWWayofTime:AlchemicalWizardrybloodRune:1
+        AWWayofTime:AlchemicalWizardrybloodRune:2
+        AWWayofTime:AlchemicalWizardrybloodRune:3
+        AWWayofTime:AlchemicalWizardrybloodRune:4
+        AWWayofTime:AlchemicalWizardrybloodRune:5
+     >
+    S:fourthTier <
+        AWWayofTime:AlchemicalWizardrybloodRune:0
+        AWWayofTime:speedRune:0
+        AWWayofTime:efficiencyRune:0
+        AWWayofTime:runeOfSacrifice:0
+        AWWayofTime:runeOfSelfSacrifice:0
+        AWWayofTime:AlchemicalWizardrybloodRune:1
+        AWWayofTime:AlchemicalWizardrybloodRune:2
+        AWWayofTime:AlchemicalWizardrybloodRune:3
+        AWWayofTime:AlchemicalWizardrybloodRune:4
+        AWWayofTime:AlchemicalWizardrybloodRune:5
+     >
+    S:secondTier <
+        AWWayofTime:AlchemicalWizardrybloodRune:0
+        AWWayofTime:speedRune:0
+        AWWayofTime:efficiencyRune:0
+        AWWayofTime:runeOfSacrifice:0
+        AWWayofTime:runeOfSelfSacrifice:0
+        AWWayofTime:AlchemicalWizardrybloodRune:1
+        AWWayofTime:AlchemicalWizardrybloodRune:2
+        AWWayofTime:AlchemicalWizardrybloodRune:3
+        AWWayofTime:AlchemicalWizardrybloodRune:4
+        AWWayofTime:AlchemicalWizardrybloodRune:5
+     >
+    S:sixthTier <
+        AWWayofTime:AlchemicalWizardrybloodRune:0
+        AWWayofTime:speedRune:0
+        AWWayofTime:efficiencyRune:0
+        AWWayofTime:runeOfSacrifice:0
+        AWWayofTime:runeOfSelfSacrifice:0
+        AWWayofTime:AlchemicalWizardrybloodRune:1
+        AWWayofTime:AlchemicalWizardrybloodRune:2
+        AWWayofTime:AlchemicalWizardrybloodRune:3
+        AWWayofTime:AlchemicalWizardrybloodRune:4
+        AWWayofTime:AlchemicalWizardrybloodRune:5
+     >
+    S:specialBlocks <
+        minecraft:stonebrick:0
+        minecraft:glowstone:0
+        minecraft:stonebrick:0
+        AWWayofTime:largeBloodStoneBrick:0
+        minecraft:beacon:0
+        minecraft:stonebrick:0
+        AWWayofTime:blockCrystal:0
+     >
+    S:thirdTier <
+        AWWayofTime:AlchemicalWizardrybloodRune:0
+        AWWayofTime:speedRune:0
+        AWWayofTime:efficiencyRune:0
+        AWWayofTime:runeOfSacrifice:0
+        AWWayofTime:runeOfSelfSacrifice:0
+        AWWayofTime:AlchemicalWizardrybloodRune:1
+        AWWayofTime:AlchemicalWizardrybloodRune:2
+        AWWayofTime:AlchemicalWizardrybloodRune:3
+        AWWayofTime:AlchemicalWizardrybloodRune:4
+        AWWayofTime:AlchemicalWizardrybloodRune:5
+     >
+}
+
+
+sacrifice {
+    I:"LP gained per HP from sacrifice"=50
+    D:"LP per (self-)sacrifice with incense"=100.0
+    I:"LP per sacrifice with Well of Suffering ritual"=10
+    I:"LP per self-sacrifice"=200
+    I:"LP per self-sacrifice with Ritual of Feathered Knife"=100
+
+    "custom values" {
+        I:AWWayofTime.AirElemental=25
+        I:AWWayofTime.BileDemon=25
+        I:AWWayofTime.BoulderFist=25
+        I:AWWayofTime.EarthElemental=25
+        I:AWWayofTime.FallenAngel=25
+        I:AWWayofTime.FireElemental=25
+        I:AWWayofTime.HolyElemental=25
+        I:AWWayofTime.IceDemon=25
+        I:AWWayofTime.LowerGuardian=25
+        I:AWWayofTime.MinorDemonGrunt=25
+        I:AWWayofTime.MinorDemonGruntEarth=25
+        I:AWWayofTime.MinorDemonGruntFire=25
+        I:AWWayofTime.MinorDemonGruntGuardian=25
+        I:AWWayofTime.MinorDemonGruntGuardianEarth=25
+        I:AWWayofTime.MinorDemonGruntGuardianFire=25
+        I:AWWayofTime.MinorDemonGruntGuardianIce=25
+        I:AWWayofTime.MinorDemonGruntGuardianWind=25
+        I:AWWayofTime.MinorDemonGruntIce=25
+        I:AWWayofTime.MinorDemonGruntWind=25
+        I:AWWayofTime.Shade=25
+        I:AWWayofTime.ShadeElemental=25
+        I:AWWayofTime.SmallEarthGolem=25
+        I:AWWayofTime.WaterElemental=25
+        I:AWWayofTime.WingedFireDemon=25
+        I:Basalz=50
+        I:Bat=50
+        I:Blaze=50
+        I:Blitz=50
+        I:Blizz=50
+        I:"Botania.botania:doppleganger"=50
+        I:"Botania.botania:pinkWither"=50
+        I:"Botania.botania:pixie"=50
+        I:Brian=50
+        I:BrownSpider=50
+        I:BrownSpiderLarge=50
+        I:BrownSpiderSmall=50
+        I:"BuildCraft|Robotics.bcRobot"=50
+        I:CaveSpider=50
+        I:Chicken=25
+        I:Cow=25
+        I:Creeper=50
+        I:EAReplicator=50
+        I:EnderDragon=50
+        I:Enderman=100
+        I:EntityHorse=25
+        I:ExtrabiomesXL.scarecrow=50
+        I:Forestry.butterflyGE=50
+        I:GalacticraftCore.AlienVillager=50
+        I:GalacticraftCore.EvolvedCreeper=50
+        I:GalacticraftCore.EvolvedSkeleton=50
+        I:GalacticraftCore.EvolvedSkeletonBoss=50
+        I:GalacticraftCore.EvolvedSpider=50
+        I:GalacticraftCore.EvolvedZombie=50
+        I:GalacticraftMars.CreeperBoss=50
+        I:GalacticraftMars.Slimeling=25
+        I:GalacticraftMars.Sludgeling=50
+        I:Ghast=50
+        I:Giant=50
+        I:GlowSlime=25
+        I:HardcoreEnderExpansion.AngryEnderman=50
+        I:HardcoreEnderExpansion.BabyEnderman=50
+        I:HardcoreEnderExpansion.Dragon=50
+        I:HardcoreEnderExpansion.EnderDemon=50
+        I:HardcoreEnderExpansion.EnderEye=50
+        I:HardcoreEnderExpansion.EnderGuardian=50
+        I:HardcoreEnderExpansion.Endermage=50
+        I:HardcoreEnderExpansion.FireFiend=50
+        I:HardcoreEnderExpansion.FireGolem=50
+        I:HardcoreEnderExpansion.ForestGhost=50
+        I:HardcoreEnderExpansion.HauntedMiner=50
+        I:HardcoreEnderExpansion.HomelandEnderman=50
+        I:HardcoreEnderExpansion.InfestedBat=50
+        I:HardcoreEnderExpansion.Louse=50
+        I:HardcoreEnderExpansion.ParalyzedEnderman=100
+        I:HardcoreEnderExpansion.ScorchedLens=50
+        I:HardcoreEnderExpansion.VampireBat=50
+        I:LavaSlime=25
+        I:Mekanism.BabySkeleton=50
+        I:Mekanism.Robit=50
+        I:MineFactoryReloaded.mfrEntityPinkSlime=25
+        I:MushroomCow=25
+        I:Natura.FlameSpider=50
+        I:Natura.FlameSpiderBaby=50
+        I:Natura.Imp=25
+        I:Natura.NitroCreeper=50
+        I:NetherOres.netherOresHellfish=50
+        I:NuclearMonster=50
+        I:OpenBlocks.Luggage=25
+        I:OpenBlocks.MiniMe=50
+        I:Ozelot=25
+        I:Paul=50
+        I:Pig=25
+        I:PigZombie=50
+        I:PneumaticCraft.Drone=50
+        I:PneumaticCraft.logisticDrone=50
+        I:Sheep=25
+        I:Silverfish=50
+        I:Skeleton=50
+        I:Slime=25
+        I:SnowMan=50
+        I:Spider=50
+        I:Squid=50
+        I:TConstruct.Crystal=50
+        I:TConstruct.EdibleSlime=50
+        I:TConstruct.KingSlime=50
+        I:Villager=150
+        I:VillagerGolem=50
+        I:Witch=50
+        I:WitherBoss=50
+        I:Wolf=25
+        I:Zombie=50
+        I:alienBug=50
+        I:alienVillagerAR=50
+        I:arsmagica2.AirSled=50
+        I:arsmagica2.BattleChicken=50
+        I:arsmagica2.BossAirGuardian=50
+        I:arsmagica2.BossArcaneGuardian=50
+        I:arsmagica2.BossEarthGuardian=50
+        I:arsmagica2.BossEnderGuardian=50
+        I:arsmagica2.BossFireGuardian=50
+        I:arsmagica2.BossLifeGuardian=50
+        I:arsmagica2.BossLightningGuardian=50
+        I:arsmagica2.BossNatureGuardian=50
+        I:arsmagica2.BossWaterGuardian=50
+        I:arsmagica2.BossWinterGuardian=50
+        I:arsmagica2.DaBroom=50
+        I:arsmagica2.EarthElemental=50
+        I:arsmagica2.Flicker=50
+        I:arsmagica2.HellCow=50
+        I:arsmagica2.MobDarkMage=50
+        I:arsmagica2.MobDarkling=50
+        I:arsmagica2.MobDryad=50
+        I:arsmagica2.MobFireElemental=50
+        I:arsmagica2.MobHecate=50
+        I:arsmagica2.MobLightMage=50
+        I:arsmagica2.MobMageVillager=150
+        I:arsmagica2.MobManaCreeper=50
+        I:arsmagica2.MobManaElemental=50
+        I:arsmagica2.MobWaterElemental=50
+        I:arsmagica2.RiftStorage=50
+        I:arsmagica2.ShadowHelper=50
+        I:arsmagica2.ThrownArm=50
+        I:arsmagica2.ThrownRock=50
+        I:arsmagica2.ThrownSickle=50
+        I:arsmagica2.Whirlwind=50
+        I:chisel.snowman=50
+        I:computronics.swarm=50
+        I:enderzoo.ConcussionCreeper=50
+        I:enderzoo.DireWolf=50
+        I:enderzoo.Enderminy=50
+        I:enderzoo.FallenKnight=50
+        I:enderzoo.FallenMount=25
+        I:enderzoo.WitherCat=50
+        I:enderzoo.WitherWitch=50
+        I:extraplanets.CreeperBossEris=50
+        I:extraplanets.CreeperBossPluto=50
+        I:extraplanets.EvolvedBlaze=50
+        I:extraplanets.EvolvedBlueCreeper=50
+        I:extraplanets.EvolvedEnderman=50
+        I:extraplanets.EvolvedFireBatBoss=50
+        I:extraplanets.EvolvedGhastBoss=50
+        I:extraplanets.EvolvedGiantSpider=50
+        I:extraplanets.EvolvedIceSlime=50
+        I:extraplanets.EvolvedIceSlimeBoss=50
+        I:extraplanets.EvolvedMagmaCube=25
+        I:extraplanets.EvolvedMagmaCubeBoss=50
+        I:extraplanets.EvolvedMiniEnderman=50
+        I:extraplanets.EvolvedPowerSkeleton=50
+        I:extraplanets.EvolvedRedCreeper=50
+        I:extraplanets.EvolvedSnowmanBoss=50
+        I:extraplanets.EvolvedWitch=50
+        I:netherlicious.Ashling=50
+        I:netherlicious.BlazeKnight=50
+        I:netherlicious.CrimsonRay=50
+        I:netherlicious.Ember=50
+        I:netherlicious.EmberFoxfire=50
+        I:netherlicious.EmberShadow=50
+        I:netherlicious.EmberSoul=50
+        I:netherlicious.FoxfireRay=50
+        I:netherlicious.Hoglin=25
+        I:netherlicious.Piglin=50
+        I:netherlicious.Skull=50
+        I:netherlicious.Smolder=50
+        I:netherlicious.SporeCrimson=50
+        I:netherlicious.SporeFoxfire=50
+        I:netherlicious.SporeWarped=50
+        I:netherlicious.Strider=25
+        I:netherlicious.WarpedRay=50
+        I:netherlicious.Zoglin=50
+        I:netherlicious.ZombiePiglin=50
+        I:osirisBoss=50
+        I:porcodon=25
+        I:robotVillager=50
+        I:sentryRobot=50
+        I:witherSkeleton=50
     }
 
 }
