--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -127,6 +127,9 @@ general {
     # Do not ever touch this value if not asked to. Possible symptoms of doing so include your head turning backwards, the appearance of Titans near the walls or you being trapped in a game of Sword Art Online.
     I:spreader.posShift=1
 
+    # How many ticks into the future will mana spreaders attempt to predict where mana bursts go? Setting this lower will improve spreader performance, but will cause them to not fire at targets that are too far away.
+    I:spreader.traceTime=400
+
     # Set this to false to disable Thaumcraft Infusion Stabilizing in botania blocks
     B:thaumraftStabilizers.enabled=true
 
