--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://www.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Tue Dec 27 23:47:36 CET 2022
+#Fri Apr 07 21:18:52 CEST 2023
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
