--- a/config/TinkersConstruct.cfg
+++ b/config/TinkersConstruct.cfg
@@ -5,6 +5,28 @@ achievements {
 }
 
 
+balance {
+    # Set to false to disable
+    B:"Allow Stone to be molted into smeltery blocks"=true
+    B:"Enable casting of Gears"=true
+
+    # Set to 0 to disable
+    I:"Flat Xp cost for applying modifier"=10
+
+    # Set to 0 to disable
+    I:"Increase in XP cost per repair count"=0
+
+    # Set to false to disable
+    B:"Limits Stencils to only early game tool parts"=true
+
+    # Set to 0 to disable
+    I:"Repair value provided per xp point"=20
+
+    # Set to 0 to disable
+    D:"Xp cost modifier per active modifier. [Formula: XP cost = (repair * (1 + Modifiers * modModifier))/repairPerXp]"=1.0
+}
+
+
 craftingstationblacklist {
     S:tileEntities <
         wanion.avaritiaddons.block.chest.infinity.TileEntityInfinityChest
@@ -35,6 +57,7 @@ craftingstationblacklist {
     B:"Remove Gold Cast Recipes"=true
     B:"Remove Vanilla Tool Effectiveness"=false
     B:"Remove Vanilla Tool Recipes"=false
+    B:"Replace Aluminium Brass Pattern with Steel ones"=false
     B:"Spawn beginner book"=false
     B:"Tools lose 10% durability on death"=true
 }
@@ -66,6 +89,7 @@ dimblacklist {
 experimental {
     B:"Allow horses to be melted down for glue"=true
     B:"Allow villagers to be melted down for emeralds"=true
+    B:"Enable experimental backports"=true
     B:"Items can be thrown into smelteries"=true
     B:"Minimal Textures"=false
 
