--- a/config/worldedit/worldedit.properties
+++ b/config/worldedit/worldedit.properties
@@ -1,5 +1,5 @@
 #Don't put comments; they get removed
-#Tue Dec 27 23:47:28 CET 2022
+#Fri Apr 07 21:18:38 CEST 2023
 default-max-polygon-points=-1
 schematic-save-dir=schematics
 super-pickaxe-many-drop-items=true
