--- a/config/archaicfix.cfg
+++ b/config/archaicfix.cfg
@@ -51,7 +51,7 @@ general {
 
     # When true, the Phosphor backport is enabled. Disabling is not recommended as it will generally add lag.
     # [default: true]
-    B:enablePhosphor=true
+    B:enablePhosphor=false
 
     # EXPERIMENTAL: Enables multi-threaded chunk updating. At the moment it only works if enableOcclusionTweaks is turned on.
     # [default: false]
