--- a/config/archaicfix.cfg
+++ b/config/archaicfix.cfg
@@ -36,14 +36,14 @@ general {
     B:enableHitThroughGrassFix=true
 
     # Add the Let's Encrypt root certificates to the default trust store. [default: false]
-    B:enableLetsEncryptRoot=false
+    B:enableLetsEncryptRoot=true
 
     # Prevents buttons from showing a yellow text color when hovered, as was done in 1.14+. [default: false]
     B:enableNewButtonAppearance=false
     B:enableOcclusionTweaks=false
 
     # When true, the Phosphor backport is enabled. Disabling is not recommended as it will generally add lag. [default: true]
-    B:enablePhosphor=false
+    B:enablePhosphor=true
     B:enableThreadedChunkUpdates=false
 
     # Fix vanilla issues with entities spawned as part of structures not being marked persistent (e.g. MC-108664) [default: true]
@@ -138,7 +138,7 @@ general {
     B:showBlockDebugInfo=false
 
     # Show memory usage during game load. [default: true]
-    B:showSplashMemoryBar=true
+    B:showSplashMemoryBar=false
 }
 
 
