--- a/config/foamfix.cfg
+++ b/config/foamfix.cfg
@@ -32,7 +32,7 @@ bugfixes {
     B:log4jExploitFix=true
 
     # Fix projectiles that deal 0 damage not knocking back players. (from BugfixMod by williewillus)
-    B:snowballFix=false
+    B:snowballFix=true
 
     # Fix sounds playing extra times when you close a GUI or unpause the game (from Forkage by immibis)
     B:soundSystemUnpauseFix=true
