--- a/config/neodymium.cfg
+++ b/config/neodymium.cfg
@@ -10,7 +10,7 @@ _general {
     B:hotswap=false
 
     # Set this to false to disable update checking. [default: true]
-    B:updateChecker=true
+    B:updateChecker=false
 }
 
 
