--- a/config/etfuturum/blocksitems.cfg
+++ b/config/etfuturum/blocksitems.cfg
@@ -322,7 +322,7 @@ equipment {
     B:enablePigstep=true
 
     # If true, vanilla and Et Futurum copper ores will drop raw ore items. [default: true]
-    B:enableRawOres=true
+    B:enableRawOres=false
 
     #  [default: true]
     B:enableSuspiciousStew=true
